# Ray-Tracing-Android

./: Ray Tracing.sln  settings.gradle
Ray Tracing/: Intersection.cs  MainActivity.cs  Ray Tracing.csproj  Shape.cs  Triangle.cs  Vertex.cs
Ray Tracing/Properties/: AndroidManifest.xml  AssemblyInfo.cs
Ray Tracing/Resources/: Resource.designer.cs
Ray Tracing/Resources/layout/: activity_main.xml
Ray Tracing/Resources/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com.kaganndemirr.raytracing/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_reflection.xml  activity_reflection_triangle.xml  activity_refraction.xml  activity_shadow.xml  activity_sphere.xml  activity_transparency.xml  activity_triangle.xml
app/src/main/res/values/: refs.xml  strings.xml
base/: cmake_install.cmake
cpuraytracing/: build.gradle
cpuraytracing/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
vulkanraytracing/: CMakeLists.txt  build.gradle
vulkanraytracing/base/: CMakeLists.txt  VulkanAndroid.cpp  VulkanAndroid.hpp  VulkanBuffer.hpp
vulkanraytracing/src/androidTest/java/com/kaganndemirr/vulkanraytracing/: ExampleInstrumentedTest.kt
vulkanraytracing/src/main/: AndroidManifest.xml
vulkanraytracing/src/main/cpp/: VulkanRayTracing.cpp
vulkanraytracing/src/main/java/com/kaganndemirr/vulkanraytracing/: MainActivity.kt
vulkanraytracing/src/main/res/values/: strings.xml
vulkanraytracing/src/test/java/com/kaganndemirr/vulkanraytracing/: ExampleUnitTest.kt
(+93 files in other folders)
